objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Marketing Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Future Review</fullName>
        </values>
        <values>
            <fullName>Get Lead Assignment</fullName>
        </values>
        <values>
            <fullName>MQL</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Approved_for_Salesforce_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Salesforce Integration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Method__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>50/50 Campaign</fullName>
                </value>
                <value>
                    <fullName>ABC Campaign</fullName>
                </value>
                <value>
                    <fullName>AdWords - Construction</fullName>
                </value>
                <value>
                    <fullName>Adwords - Consultation</fullName>
                </value>
                <value>
                    <fullName>AdWords - Healthcare</fullName>
                </value>
                <value>
                    <fullName>AdWords - HR Support</fullName>
                </value>
                <value>
                    <fullName>AdWords - Payroll</fullName>
                </value>
                <value>
                    <fullName>AdWords - Remarketing</fullName>
                </value>
                <value>
                    <fullName>AdWords - Restaurants</fullName>
                </value>
                <value>
                    <fullName>AdWords - Workers Comp</fullName>
                </value>
                <value>
                    <fullName>AdWords Display - General</fullName>
                </value>
                <value>
                    <fullName>AdWords Display - General Image</fullName>
                </value>
                <value>
                    <fullName>AdWords Display - Managed Placement</fullName>
                </value>
                <value>
                    <fullName>BDM Top 10 Campaign</fullName>
                </value>
                <value>
                    <fullName>BIA Golf Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Display - Healthcare</fullName>
                </value>
                <value>
                    <fullName>Display - Payroll</fullName>
                </value>
                <value>
                    <fullName>Employee Retention ebook</fullName>
                </value>
                <value>
                    <fullName>Hawaii Business Print</fullName>
                </value>
                <value>
                    <fullName>HR Training</fullName>
                </value>
                <value>
                    <fullName>New Company Campaign</fullName>
                </value>
                <value>
                    <fullName>OSHA 30 BIA</fullName>
                </value>
                <value>
                    <fullName>Outer Island Reengage 1Q18</fullName>
                </value>
                <value>
                    <fullName>PBN Small Biz Expo</fullName>
                </value>
                <value>
                    <fullName>ProService Blog</fullName>
                </value>
                <value>
                    <fullName>Stanton Big Island</fullName>
                </value>
                <value>
                    <fullName>West Hawaii SBDC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Q3 Promotion 2018</fullName>
                </value>
                <value>
                    <fullName>Top 20 - Construction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Generated_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Generated From</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_to_Reach_Opportunity__c</fullName>
        <label>Days to Reach Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_took_to_convert__c</fullName>
        <description>Number of days from creation of Lead to Convert (Account/Opp/Contact)</description>
        <formula>ConvertedDate - datevalue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days from creation of Lead to Convert (Account/Opp/Contact)</inlineHelpText>
        <label>Days took to convert</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Phone__c</fullName>
        <description>Direct Phone</description>
        <label>Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Estimated_Number_of_EEs__c</fullName>
        <description>Estimated number of employees (FT &amp; PT) working for the company</description>
        <inlineHelpText>Estimated number of employees (FT &amp; PT) working for the company</inlineHelpText>
        <label>Estimated # of EEs</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Method__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Growth Series 3.27.18</fullName>
                </value>
                <value>
                    <fullName>Growth Series 6.27.18</fullName>
                </value>
                <value>
                    <fullName>Kona Brewfest 3.10.18</fullName>
                </value>
                <value>
                    <fullName>Maui Chamber Event 2.21.18</fullName>
                </value>
                <value>
                    <fullName>Small Biz Academy 1.25.18</fullName>
                </value>
                <value>
                    <fullName>Small Biz Academy 3.9.18</fullName>
                </value>
                <value>
                    <fullName>SmallBiz Awards 5.4.18</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ID from the external system this lead was imported from if applicable.  Should represent a combination of the source system and source ID to maintain uniqueness.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <description>The name of the external system that this record was imported from.</description>
        <label>External Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_touch_converting_campaign__c</fullName>
        <description>The campaign responsible for the first touch creation of this lead. From HubSpot.</description>
        <label>First touch converting campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Island_s__c</fullName>
        <description>Island(s) the organization does business in</description>
        <inlineHelpText>Island(s) the organization does business in</inlineHelpText>
        <label>Island(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Kauai</fullName>
                </value>
                <value>
                    <fullName>Lanai</fullName>
                </value>
                <value>
                    <fullName>Maui</fullName>
                </value>
                <value>
                    <fullName>Molokai</fullName>
                </value>
                <value>
                    <fullName>Oahu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_marketing_email_name__c</fullName>
        <description>The name of the last marketing email sent to the current email address. This is automatically set by HubSpot.</description>
        <label>Last marketing email name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_marketing_email_send_date__c</fullName>
        <description>The date of the most recent delivery for any marketing email to the current email address. This is automatically set by HubSpot.</description>
        <label>Last marketing email send date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Date__c</fullName>
        <description>Date of when the record is created.</description>
        <label>Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Method__c</fullName>
        <label>Lead Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call In</fullName>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
                <value>
                    <fullName>Prospecting Activities</fullName>
                </value>
                <value>
                    <fullName>Walk In</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>HIIFS</fullName>
                </value>
                <value>
                    <fullName>AIS</fullName>
                </value>
                <value>
                    <fullName>ASB</fullName>
                </value>
                <value>
                    <fullName>HLTCA</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Tanaka</fullName>
                    <isActive>false</isActive>
                    <label>Tanaka</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Role__c</fullName>
        <label>Lead Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner/Executive</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Sales/Marketing</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketingCampaignSource__c</fullName>
        <label>Marketing Campaign Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Parent Account)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recent_Conversion_Date__c</fullName>
        <description>The date this lead last submitted a form. From HubSpot (Read only).</description>
        <label>Recent Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral</label>
        <referenceTo>Referral_Tracker__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_Client_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client or Partner that referred the Organization to ProService</description>
        <inlineHelpText>Client or Partner that referred the Organization to ProService</inlineHelpText>
        <label>Referred by Client/Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads_del1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_Department__c</fullName>
        <description>Department the employee belongs to that referred the Organization</description>
        <inlineHelpText>Department the employee belongs to that referred the Organization</inlineHelpText>
        <label>Referred by Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Client HR</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Front Office</fullName>
                </value>
                <value>
                    <fullName>HR Associates</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>Internal Audit Team</fullName>
                </value>
                <value>
                    <fullName>Internal HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Pricing &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>Risk Control</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Operations</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>Payroll-Kokua</fullName>
                </value>
                <value>
                    <fullName>Payroll-Hoomau</fullName>
                </value>
                <value>
                    <fullName>Payroll-Laulima</fullName>
                </value>
                <value>
                    <fullName>Payroll-Lokahi</fullName>
                </value>
                <value>
                    <fullName>Payroll-Pono</fullName>
                </value>
                <value>
                    <fullName>Payroll-Hookela</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_by_EE_Text__c</fullName>
        <description>Place holder for data coming in from proferral website</description>
        <inlineHelpText>Place holder for data coming in from proferral website</inlineHelpText>
        <label>Referred by EE (text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by_EE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referred by Internal EE - Please fill this out if  Referred by EE (text is filled in), otherwise, this data will not move to the Opportunity.</description>
        <inlineHelpText>Referred by Internal EE - Please fill this out if  Referred by EE (text is filled in), otherwise, this data will not move to the Opportunity.</inlineHelpText>
        <label>Referred by EE (lookup)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_PSH_Email__c</fullName>
        <description>Email of PSH employee registering the Lead or PROferral.</description>
        <inlineHelpText>Email of PSH employee registering the Lead or PROferral.</inlineHelpText>
        <label>Referred by PSH Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referring_Client_Contact_Email__c</fullName>
        <description>From proferral web form page</description>
        <inlineHelpText>From proferral web form page</inlineHelpText>
        <label>Referring Client Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referring_Client_Contact_First_Name__c</fullName>
        <description>From Proferral web form page</description>
        <inlineHelpText>From Proferral web form page</inlineHelpText>
        <label>Referring Client Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Client_Contact_Last_Name__c</fullName>
        <description>From Proferral web form page</description>
        <inlineHelpText>From Proferral web form page</inlineHelpText>
        <label>Referring Client Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Client_Contact_Name__c</fullName>
        <description>From Proferral web form page</description>
        <inlineHelpText>From Proferral web form page</inlineHelpText>
        <label>Referring Client Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Client_Contact_Phone__c</fullName>
        <description>From proferral web form page</description>
        <inlineHelpText>From proferral web form page</inlineHelpText>
        <label>Referring Client Contact Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referring_Client_ID__c</fullName>
        <description>For Proferral program web form</description>
        <externalId>true</externalId>
        <inlineHelpText>For Proferral program web form</inlineHelpText>
        <label>Referring Client ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Client_Name__c</fullName>
        <description>From proferral page</description>
        <inlineHelpText>From proferral page</inlineHelpText>
        <label>Referring Client Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <description>Reason the lead was disqualified</description>
        <inlineHelpText>Reason the lead was disqualified</inlineHelpText>
        <label>Rejected Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Could not reach - Contact Information Not Valid</fullName>
                </value>
                <value>
                    <fullName>Could not reach - No Response After Multiple Attempts</fullName>
                </value>
                <value>
                    <fullName>Duplicate Entry</fullName>
                </value>
                <value>
                    <fullName>Not a good fit - Company is too early stage</fullName>
                </value>
                <value>
                    <fullName>Not a good fit - Cost</fullName>
                </value>
                <value>
                    <fullName>Not a good fit - Current Client</fullName>
                </value>
                <value>
                    <fullName>Not a good fit - Former client - we don't want</fullName>
                </value>
                <value>
                    <fullName>Not a good fit - Has Internal Team</fullName>
                </value>
                <value>
                    <fullName>Not a good fit - High Risk</fullName>
                </value>
                <value>
                    <fullName>Not a good fit - Mainland/out of country</fullName>
                </value>
                <value>
                    <fullName>Not a good fit - Seeking a la carte services</fullName>
                </value>
                <value>
                    <fullName>Not a good fit - Too Few EEs</fullName>
                </value>
                <value>
                    <fullName>Not a good fit - Union</fullName>
                </value>
                <value>
                    <fullName>Not a lead</fullName>
                </value>
                <value>
                    <fullName>Not at this Time - &lt; 3 EEs</fullName>
                </value>
                <value>
                    <fullName>Not at this Time - 1099s</fullName>
                </value>
                <value>
                    <fullName>Not at this Time - A La Carte</fullName>
                </value>
                <value>
                    <fullName>Not at this Time - Month to month</fullName>
                </value>
                <value>
                    <fullName>Not at this Time - Not Ready</fullName>
                </value>
                <value>
                    <fullName>Not at this Time - Staffing</fullName>
                </value>
                <value>
                    <fullName>Not Interested - Reengage In The Future</fullName>
                </value>
                <value>
                    <fullName>Other (Please leave context in Description field)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_to_Lead__c</fullName>
        <description>Staff can include details on how they know the lead they are submitting</description>
        <inlineHelpText>Staff can include details on how they know the lead they are submitting</inlineHelpText>
        <label>Relationship to Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_a_thank_you_to_your_referrer__c</fullName>
        <description>From proferral web form page</description>
        <inlineHelpText>From proferral web form page</inlineHelpText>
        <label>Send a thank you to your referrer?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Giftcard</fullName>
                </value>
                <value>
                    <fullName>Thank You Card</fullName>
                </value>
                <value>
                    <fullName>Thanks a Latte</fullName>
                </value>
                <value>
                    <fullName>Tote Bag</fullName>
                </value>
                <value>
                    <fullName>PROferral Party</fullName>
                </value>
                <value>
                    <fullName>Client Dinner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UTMCampaign__c</fullName>
        <label>UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTMContent__c</fullName>
        <label>UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTMMedium__c</fullName>
        <label>UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTMSource__c</fullName>
        <label>UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTMTerm__c</fullName>
        <label>UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Challenge__c</fullName>
        <description>Text field for user to enter HR challenge</description>
        <inlineHelpText>Text field for user to enter HR challenge</inlineHelpText>
        <label>Challenge/Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Updated_from_code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating if the record update was made from code/trigger.</description>
        <label>Updated from code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Meeting_Date__c</fullName>
        <description>1st Meeting Date</description>
        <inlineHelpText>1st Meeting Date</inlineHelpText>
        <label>1st Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XXOpp_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>XXOpp External ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>test_field__c</fullName>
        <defaultValue>1</defaultValue>
        <label>test field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>X1st_Meeting_Date__c</columns>
        <columns>Referring_Client_Name__c</columns>
        <columns>Lead_Date__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Campaign_Name__c</columns>
        <columns>UTMCampaign__c</columns>
        <columns>UTMContent__c</columns>
        <columns>UTMMedium__c</columns>
        <columns>UTMSource__c</columns>
        <columns>UTMTerm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Marketing Lead</value>
        </filters>
        <label>Internal Referrals by Department</label>
    </listViews>
    <listViews>
        <fullName>BDM_Users_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Open Queue</label>
        <queue>BDM_Users</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Referrals</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Method__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>Client Referral</value>
        </filters>
        <label>Client Referrals</label>
    </listViews>
    <listViews>
        <fullName>Client_Referrals1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Lead_Date__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Client Referral</value>
        </filters>
        <label>Client Referrals</label>
    </listViews>
    <listViews>
        <fullName>Client_Referrals2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>Lead_Date__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Lead_Method__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Referring_Client_Name__c</columns>
        <columns>Referred_by_EE_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Client Referral</value>
        </filters>
        <label>Client Referrals</label>
    </listViews>
    <listViews>
        <fullName>Internal_Lead</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>Referred_by_EE_Text__c</columns>
        <columns>Referred_by_Department__c</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.TITLE</columns>
        <columns>Relationship_to_Lead__c</columns>
        <columns>UTM_Challenge__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Referring_Client_Name__c</field>
            <operation>equals</operation>
        </filters>
        <label>Internal Lead</label>
    </listViews>
    <listViews>
        <fullName>Last_Month_s_Leads_by_Status</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Date__c</field>
            <operation>greaterThan</operation>
            <value>4/20/2018</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,MQL,Get Lead Assignment</value>
        </filters>
        <label>Open Leads by Status</label>
    </listViews>
    <listViews>
        <fullName>Leads_with_No_Source</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>Lead_Date__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notEqual</operation>
            <value>Client Referral,Internal Referral,Marketing Lead,Referring Partner,BDM</value>
        </filters>
        <filters>
            <field>X1st_Meeting_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Leads with Non-Standard Sources</label>
    </listViews>
</CustomObject>